issues with sizing fixed- but more issues with stretching remain

--- a/css/css.css
+++ b/css/css.css
@@ -35,7 +35,7 @@ nav a:hover {
 
 .card {
     float: left;
-    width: 20%;
+    height: 20%;
     margin-left: 10%;
     
 }
@@ -46,8 +46,9 @@ nav a:hover {
 }     
 
 img {
-    width: 100%;
     
+    height: 150px;
+    width: 200px;
 }
 
 h1 {
